# mai_oop_cpp_task_4

./: CMakeLists.txt  README.md
include/: Array.hpp  Figure.hpp  Helpers.hpp  Point.hpp  Rectangle.hpp  Square.hpp  Trapezoid.hpp
src/: main.cpp
templates/: Array.tpp  Point.tpp  Rectangle.tpp  Square.tpp  Trapezoid.tpp
tests/: test_template.cpp
